Added documentation for new histoArray features

--- a/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
@@ -10,7 +10,7 @@
     "* create figure layout and histogram aray\n",
     "* simple hstogramming\n",
     "* histogramming with table\n",
-    "* histogramming with weights\n"
+    "* histogramming with weights"
    ]
   },
   {
@@ -109,7 +109,21 @@
     "      * nbins - sclar in array\n",
     "      * ranges [max,min] 0 in case not specified minimum maximum of data points for current selection  used\n",
     "      * qunatiles, sum_range, axis\n",
-    "         * parameters of agreagation function"
+    "         * parameters of agreagation function\n",
+    "   * columns in created histograms\n",
+    "      * 1D histogram:\n",
+    "          * bin_bottom, bin_center, bin_top - bin edges and centers\n",
+    "          * bin_count - (weighted) count\n",
+    "      * ND histogram (N>1):\n",
+    "          * bin_bottom_i, bin_center_i, bin_top_i - bin edges and centers on the histogram's i-th axis\n",
+    "          * bin_count - (weighted) count\n",
+    "      * ND histogram projection (can be accessed in bokehDraw by histoName_i where histoName is the histogram's name and i is the index of the projection axis):\n",
+    "          * bin_bottom_i, bin_center_i, bin_top_i - bin edges and centers on the histogram projection's i-th axis\n",
+    "          * entries - the (weighted) count of entries\n",
+    "          * mean - the (weighted) mean value of the i-th axis in the bin\n",
+    "          * std - the (weighted) mean value of the i-th axis in the bin\n",
+    "          * quantile_i - the i-th quantile specified in the quantiles list in histoArray\n",
+    "          "
    ]
   },
   {
