Added tutorial and test for client side interactive range sums

--- a/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
@@ -123,6 +123,7 @@
     "          * mean - the (weighted) mean value of the i-th axis in the bin\n",
     "          * std - the (weighted) mean value of the i-th axis in the bin\n",
     "          * quantile_i - the i-th quantile specified in the quantiles list in histoArray\n",
+    "          * sum_i, sum_normed_i - the i-th (normed) range sum in the sum_range list in histoArray\n",
     "          "
    ]
   },
@@ -325,11 +326,11 @@
     "    ]\n",
     "    figureArray = [\n",
     "        [['histoABC_0.bin_center_1'], ['histoABC_0.mean'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}],\n",
-    "        #[['histoABC_0.bin_center_1'], ['histoABC_0.sum_0'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}],\n",
+    "        [['histoABC_0.bin_center_1'], ['histoABC_0.sum_0'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}],\n",
     "        [['histoABC_0.bin_center_1'], ['histoABC_0.std'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}]\n",
     "    ]\n",
     "    figureLayoutDesc=[\n",
-    "        [0, 1, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
+    "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
     "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
     "    ]\n",
     "    \n",
@@ -348,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
