--- a/RootInteractive/tutorial/bokehDraw/standAlone.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/standAlone.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test macro for Bokeh client visualization\n",
+    "# Tutorial for Bokeh client visualization\n",
     "* it is aimed to be used for develoopers to test feature of bokeh interactive  - standalone plotting"
    ]
   },
@@ -14,10 +14,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bokeh.io import output_notebook\n",
-    "from RootInteractive.InteractiveDrawing.bokeh.bokehDrawSA import *\n",
-    "from RootInteractive.InteractiveDrawing.bokeh.bokehTools import *\n",
+    "from bokeh.io import output_notebook, show\n",
+    "from bokeh.plotting import output_file\n",
+    "from RootInteractive.InteractiveDrawing.bokeh.bokehDrawSA import bokehDrawSA\n",
+    "from RootInteractive.InteractiveDrawing.bokeh.bokehTools import bokehDrawArray\n",
+    "from RootInteractive.Tools.pandaTools import initMetadata\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
     "output_notebook()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
    ]
   },
   {
@@ -34,11 +49,26 @@
    "outputs": [],
    "source": [
     "#init test random data\n",
-    "df = pd.DataFrame(np.random.randint(0, 100, size=(100, 4)), columns=list('ABCD'))\n",
-    "df[\"Category\"]=df.eval(\"A%5\")\n",
+    "df = pd.DataFrame(np.random.random_sample(size=(1000, 6)), columns=list('ABCDEF'))\n",
+    "initMetadata(df)\n",
+    "mapDDC={0:\"A0\",1:\"A1\",2:\"A2\",3:\"A3\",4:\"A4\"}\n",
+    "df[\"B\"]=np.linspace(0,1,1000)\n",
+    "df.eval(\"Bool=A>0.5\", inplace=True)\n",
+    "df.eval(\"BoolB=B>0.5\", inplace=True)\n",
+    "df.eval(\"BoolC=C>0.1\", inplace=True)\n",
+    "df[\"A\"]=df[\"A\"].round(3);\n",
+    "df[\"B\"]=df[\"B\"].round(3);\n",
+    "df[\"C\"]=df[\"C\"].round(3);\n",
+    "df[\"D\"]=df[\"D\"].round(3);\n",
+    "df[\"AA\"]=((df.A*10).round(0)).astype(pd.CategoricalDtype(ordered=True))\n",
+    "df[\"CC\"]=((df.C*5).round(0)).astype(int)\n",
+    "df[\"DD\"]=((df.D*4).round(0)).astype(int)\n",
+    "df[\"DDC\"]=((df.D*4).round(0)).astype(int).map(mapDDC)\n",
+    "df[\"EE\"]=(df.E*4).round(0)\n",
+    "df['errY']=df.A*0.02+0.02;\n",
+    "df.loc[\"A\", 15] = math.nan\n",
     "df.head(10)\n",
-    "df.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\"}\n",
-    "#print(df.metaData)"
+    "df.meta.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\", 'Bool.AxisTitle': \"A>half\", 'E.AxisTitle': \"Category\"}\n"
    ]
   },
   {
@@ -51,18 +81,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "figureArray = [\n",
-    "        [['A'], ['D+A','C-A'], {\"size\": 1}],\n",
-    "        [['A'], ['C+A', 'C-A']],\n",
-    "        [['A'], ['Category']],\n",
-    "    ]\n",
-    "figureLayout: str = '((0,1),(2, x_visible=1),commonX=1,x_visible=1,y_visible=0,plot_height=250,plot_width=1000)'\n",
+    "#   ['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\", \"filter\": \"A<0.5\"}],\n",
+    "    [['A'], ['A*A-C*C'], {\"color\": \"red\", \"size\": 2, \"colorZvar\": \"A\", \"varZ\": \"C\"}],\n",
+    "    [['A'], ['C+A', 'C-A', 'A/A']],\n",
+    "    [['B'], ['C+B', 'C-B'], { \"colorZvar\": \"D\", \"errY\": \"errY\", \"rescaleColorMapper\": True}],\n",
+    "    [['D'], ['(A+B+C)*D'], {\"colorZvar\": \"D\", \"errY\": \"errY\"} ],\n",
+    "    [['D'], ['D*10'], {\"errY\": \"errY\"}],\n",
+    "    {\"size\":2, \"legend_options\": {\"label_text_font_size\": \"13px\"}}\n",
+    "]\n",
+    "layout = {\n",
+    "    \"A\": [\n",
+    "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
+    "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
+    "        ],\n",
+    "    \"B\": [\n",
+    "        [3, 4, {'commonX': 1, 'y_visible': 3, 'x_visible':1, 'plot_height': 100}],\n",
+    "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
+    "        ]\n",
+    "}\n",
     "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
-    "#pAll,layoutList,source =bokehDrawArray(df, \"A>0\", figureArray, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)\n",
-    "#show(pAll)"
+    "pAll = bokehDrawArray(df, \"A>0\", figureArray, layout=layout, color=\"blue\", size=4, tooltips=tooltips)\n",
+    "show(pAll[0])"
    ]
   },
   {
@@ -106,7 +151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -120,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
