Added tutorial for test_bokehDrawSA.py

--- a/RootInteractive/tutorial/bokehDraw/standAlone.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/standAlone.ipynb
@@ -5,7 +5,11 @@
    "metadata": {},
    "source": [
     "# Tutorial for Bokeh client visualization\n",
-    "* it is aimed to be used for develoopers to test feature of bokeh interactive  - standalone plotting"
+    "* import libraries\n",
+    "* generate random data source ABCD uniform\n",
+    "* simple case with no widgets\n",
+    "* adding selection widgets\n",
+    "* adding widgets for some visualization parameters"
    ]
   },
   {
@@ -22,6 +26,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import math\n",
+    "import logging\n",
     "output_notebook()\n"
    ]
   },
@@ -49,10 +54,10 @@
    "outputs": [],
    "source": [
     "#init test random data\n",
-    "df = pd.DataFrame(np.random.random_sample(size=(1000, 6)), columns=list('ABCDEF'))\n",
+    "df = pd.DataFrame(np.random.random_sample(size=(2000, 6)), columns=list('ABCDEF'))\n",
     "initMetadata(df)\n",
     "mapDDC={0:\"A0\",1:\"A1\",2:\"A2\",3:\"A3\",4:\"A4\"}\n",
-    "df[\"B\"]=np.linspace(0,1,1000)\n",
+    "df[\"B\"]=np.linspace(0,1,2000)\n",
     "df.eval(\"Bool=A>0.5\", inplace=True)\n",
     "df.eval(\"BoolB=B>0.5\", inplace=True)\n",
     "df.eval(\"BoolC=C>0.1\", inplace=True)\n",
@@ -66,7 +71,7 @@
     "df[\"DDC\"]=((df.D*4).round(0)).astype(int).map(mapDDC)\n",
     "df[\"EE\"]=(df.E*4).round(0)\n",
     "df['errY']=df.A*0.02+0.02;\n",
-    "df.loc[\"A\", 15] = math.nan\n",
+    "df.loc[15, \"A\"] = math.nan\n",
     "df.head(10)\n",
     "df.meta.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\", 'Bool.AxisTitle': \"A>half\", 'E.AxisTitle': \"Category\"}\n"
    ]
@@ -75,7 +80,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-Identify the layout"
+    "* Identify the layout\n",
+    "* Draw the graphs using bokehDrawArray - 3D doesn't work in jupyter notebook\n",
+    "* Layout description can be a dictionary, this way it creates multiple tabs"
    ]
   },
   {
@@ -106,7 +113,7 @@
     "        ]\n",
     "}\n",
     "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
-    "pAll = bokehDrawArray(df, \"A>0\", figureArray, layout=layout, color=\"blue\", size=4, tooltips=tooltips)\n",
+    "pAll = bokehDrawArray(df, \"A>0\", figureArray, layout=layout, size=4, tooltips=tooltips)\n",
     "show(pAll[0])"
    ]
   },
@@ -123,13 +130,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-Draw the graphes"
+    "* Add sliders for selection\n",
+    "* Possible sliders: \n",
+    "    * range slider\n",
+    "    * slider\n",
+    "    * multiSelect\n",
+    "    * select\n",
+    "* widget layout description works same as figure layout description"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "output_file(\"test2.html\")\n",
@@ -143,13 +158,32 @@
     "    ['range', ['E'], {'type': 'sigmaMed', 'bins': 10, 'sigma': 3}],\n",
     "    ['slider', ['AA'], {'bins': 10}],\n",
     "    ['multiSelect', [\"DDC\"]],\n",
-    "    ['select',[\"CC\", 0, 1, 2, 3]],\n",
+    "    ['select',[\"CC\", 0, 1, 2, 3],  {\"default\": 1}],\n",
     "    ['multiSelect',[\"BoolB\"]],\n",
     "]\n",
     "widgetLayoutDesc={\n",
     "    \"Selection\": [[0, 1, 2], [3, 4], [5, 6],[7,8], {'sizing_mode': 'scale_width'}]\n",
     "    }    \n",
-    "figure=bokehDrawSA.fromArray(df, None, figureArray, widgets, layout=figureLayout, color=\"blue\", size=4, tooltips=tooltips)"
+    "bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=layout, tooltips=tooltips, widgetLayout=widgetLayoutDesc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Visualization parameters\n",
+    "* So far only controllable by sliders and selects\n",
+    "* If it controls a parameter, it needs \"callback\":\"parameter\" in options. This will probably be fixed soon, making the parameter redundant.\n",
+    "* parameterArray options:\n",
+    "    * name - the name it is indexed by in figureArray / aliasArray\n",
+    "    * value - the initial value - because of a bug, if using a select to control the client side parameter, the \"default\" option has to be specified, otherwise it will be initialized to the first in the options list\n",
+    "    * range - if controlled by a slider, the range the variable can take\n",
+    "    * options - the options the parameter can have as its value\n",
+    "* Controllable by parameterArray:\n",
+    "    * color axis\n",
+    "    * marker size\n",
+    "    * legend options - in this example we set the legend font size\n",
+    "    * functions in aliasArray"
    ]
   },
   {
@@ -158,26 +192,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bokehDrawSA.initWidgets?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "parameterArray = [\n",
+    "    {\"name\": \"colorZ\", \"value\":\"EE\", \"options\":[\"A\", \"B\", \"DD\", \"EE\"]},\n",
+    "    {\"name\": \"size\", \"value\":7, \"range\":[0, 30]},\n",
+    "    {\"name\": \"legendFontSize\", \"value\":\"13px\", \"options\":[\"9px\", \"11px\", \"13px\", \"15px\"]},\n",
+    "]\n",
+    "\n",
     "figureArray = [\n",
-    "#   ['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\", \"filter\": \"A<0.5\"}],\n",
     "    [['A'], ['A*A-C*C'], {\"color\": \"red\", \"size\": 2, \"colorZvar\": \"A\", \"varZ\": \"C\", \"errY\": \"errY\", \"errX\":\"0.01\"}],\n",
-    "    [['A'], ['C+A', 'C-A', 'A/A'], {\"size\":\"size\", \"legend_options\": {\"label_text_font_size\": \"legendFontSize\"}}],\n",
-    "    [['B'], ['C+B', 'C-B'], { \"size\":\"size\", \"colorZvar\": \"colorZ\", \"errY\": \"errY\", \"rescaleColorMapper\": True , \"legend_options\": {\"label_text_font_size\": \"legendFontSize\"}}],\n",
-    "    [['D'], ['(A+B+C)*D'], {\"colorZvar\": \"colorZ\", \"size\": 10, \"errY\": \"errY\", \"legend_options\": {\"label_text_font_size\": \"legendFontSize\"}} ],\n",
-    "#    [['D'], ['D*10'], {\"size\": 10, \"errY\": \"errY\",\"markers\":markerFactor, \"color\":colorFactor,\"legend_field\":\"DDC\"}],\n",
-    "    #marker color works only once - should be constructed in wrapper\n",
-    "    [['D'], ['D*10'], {\"size\": 10, \"errY\": \"errY\", \"legend_options\": {\"label_text_font_size\": \"legendFontSize\"}}],\n",
-    "]"
+    "    [['A'], ['C+A', 'C-A', 'A/A']],\n",
+    "    [['B'], ['C+B', 'C-B'], { \"colorZvar\": \"colorZ\", \"errY\": \"errY\", \"rescaleColorMapper\": True}],\n",
+    "    [['D'], ['(A+B+C)*D'], {\"colorZvar\": \"colorZ\", \"size\": 10, \"errY\": \"errY\"} ],\n",
+    "    [['D'], ['D*10'], {\"errY\": \"errY\"}],\n",
+    "    {\"size\":\"size\", \"legend_options\": {\"label_text_font_size\": \"legendFontSize\"}}\n",
+    "]\n",
+    "widgetParams=[\n",
+    "    ['range', ['A']],\n",
+    "    ['range', ['B', 0, 1, 0.1, 0, 1]],\n",
+    "\n",
+    "    ['range', ['C'], {'type': 'minmax'}],\n",
+    "    ['range', ['D'], {'type': 'sigma', 'bins': 10, 'sigma': 3}],\n",
+    "    ['range', ['E'], {'type': 'sigmaMed', 'bins': 10, 'sigma': 3}],\n",
+    "    ['slider', ['AA'], {'bins': 10}],\n",
+    "    ['multiSelect', [\"DDC\"]],\n",
+    "    ['select',[\"CC\", 0, 1, 2, 3]],\n",
+    "    ['multiSelect',[\"BoolB\"]],\n",
+    "    #['slider','F', ['@min()','@max()','@med','@min()','@median()+3*#tlm()']], # to be implmneted\n",
+    "    ['select',[\"colorZ\"], {\"callback\": \"parameter\", \"default\": 3}],\n",
+    "    ['slider',[\"size\"], {\"callback\": \"parameter\"}],\n",
+    "    ['select',[\"legendFontSize\"], {\"callback\": \"parameter\", \"default\": 2}],\n",
+    "]\n",
+    "widgetLayoutDesc={\n",
+    "    \"Selection\": [[0, 1, 2], [3, 4], [5, 6],[7,8], {'sizing_mode': 'scale_width'}],\n",
+    "    \"Graphics\": [[9, 10, 11], {'sizing_mode': 'scale_width'}]\n",
+    "    }\n",
+    "figureLayoutDesc={\n",
+    "    \"A\": [\n",
+    "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
+    "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
+    "        ],\n",
+    "    \"B\": [\n",
+    "        [3, 4, {'commonX': 1, 'y_visible': 3, 'x_visible':1, 'plot_height': 100}],\n",
+    "        {'plot_height': 100, 'sizing_mode': 'scale_width', 'y_visible' : 2}\n",
+    "        ]\n",
+    "}\n",
+    "bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=layout, tooltips=tooltips, widgetLayout=widgetLayoutDesc, parameterArray=parameterArray)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
