Added test for compression, for some reason it doesn't work

--- a/RootInteractive/tutorial/bokehDraw/standAlone.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/standAlone.ipynb
@@ -81,7 +81,7 @@
    "metadata": {},
    "source": [
     "* Identify the layout\n",
-    "* Draw the graphs using bokehDrawArray - 3D doesn't work in jupyter notebook\n",
+    "* Draw the graphs using bokehDrawArray\n",
     "* Layout description can be a dictionary, this way it creates multiple tabs"
    ]
   },
@@ -95,7 +95,7 @@
    "source": [
     "figureArray = [\n",
     "#   ['A'], ['C-A'], {\"color\": \"red\", \"size\": 7, \"colorZvar\":\"C\", \"filter\": \"A<0.5\"}],\n",
-    "    [['A'], ['A*A-C*C'], {\"color\": \"red\", \"size\": 2, \"colorZvar\": \"A\", \"varZ\": \"C\"}],\n",
+    "    [['A'], ['A*A-C*C'], {\"size\": 2, \"colorZvar\": \"A\"}],\n",
     "    [['A'], ['C+A', 'C-A', 'A/A']],\n",
     "    [['B'], ['C+B', 'C-B'], { \"colorZvar\": \"D\", \"errY\": \"errY\", \"rescaleColorMapper\": True}],\n",
     "    [['D'], ['(A+B+C)*D'], {\"colorZvar\": \"D\", \"errY\": \"errY\"} ],\n",
@@ -192,6 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "output_file(\"test3.html\")\n",
     "parameterArray = [\n",
     "    {\"name\": \"colorZ\", \"value\":\"EE\", \"options\":[\"A\", \"B\", \"DD\", \"EE\"]},\n",
     "    {\"name\": \"size\", \"value\":7, \"range\":[0, 30]},\n",
@@ -199,7 +200,7 @@
     "]\n",
     "\n",
     "figureArray = [\n",
-    "    [['A'], ['A*A-C*C'], {\"color\": \"red\", \"size\": 2, \"colorZvar\": \"A\", \"varZ\": \"C\", \"errY\": \"errY\", \"errX\":\"0.01\"}],\n",
+    "    [['A'], ['A*A-C*C'], {\"size\": 2, \"colorZvar\": \"A\", \"errY\": \"errY\", \"errX\":\"0.01\"}],\n",
     "    [['A'], ['C+A', 'C-A', 'A/A']],\n",
     "    [['B'], ['C+B', 'C-B'], { \"colorZvar\": \"colorZ\", \"errY\": \"errY\", \"rescaleColorMapper\": True}],\n",
     "    [['D'], ['(A+B+C)*D'], {\"colorZvar\": \"colorZ\", \"size\": 10, \"errY\": \"errY\"} ],\n",
@@ -237,6 +238,73 @@
     "        ]\n",
     "}\n",
     "bokehDrawSA.fromArray(df, \"A>0\", figureArray, widgetParams, layout=layout, tooltips=tooltips, widgetLayout=widgetLayoutDesc, parameterArray=parameterArray)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Optimization\n",
+    "    * Compress the data\n",
+    "        * bokehDrawArray (and bokehDrawSA) take an arrayCompression parameter, which is a list of (regex, pipeline) pairs, where regex is the regular expression used to match column names\n",
+    "          and pipeline is a list of operations to be used on the column. Supported values are \"relative\", \"delta\", \"zip\" and \"base64\" and the pipeline only works if the last step is (\"base64\", 0)\n",
+    "    * Random downsampling on the client\n",
+    "        * if nPointRender is specified as an option to bokehDrawArray / bokehDrawSA the data is downsampled so that only n points from the original data source are rendered, improving the performance\n",
+    "* Dashboard will be created in current directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfLarge = pd.DataFrame(np.random.random_sample(size=(200000, 6)), columns=list('ABCDEF'))\n",
+    "initMetadata(dfLarge)\n",
+    "dfLarge[\"B\"]=np.linspace(0,1,200000)\n",
+    "dfLarge.eval(\"Bool=A>0.5\", inplace=True)\n",
+    "dfLarge.eval(\"BoolB=B>0.5\", inplace=True)\n",
+    "dfLarge.eval(\"BoolC=C>0.1\", inplace=True)\n",
+    "dfLarge[\"A\"]=dfLarge[\"A\"].round(3)\n",
+    "dfLarge[\"B\"]=dfLarge[\"B\"].round(3)\n",
+    "dfLarge[\"C\"]=dfLarge[\"C\"].round(3)\n",
+    "dfLarge[\"D\"]=dfLarge[\"D\"].round(3)\n",
+    "dfLarge[\"AA\"]=((dfLarge.A*10).round(0)).astype(pd.CategoricalDtype(ordered=True))\n",
+    "dfLarge[\"CC\"]=((dfLarge.C*5).round(0)).astype(int)\n",
+    "dfLarge[\"DD\"]=((dfLarge.D*4).round(0)).astype(int)\n",
+    "dfLarge[\"DDC\"]=((dfLarge.D*4).round(0)).astype(int).map(mapDDC)\n",
+    "dfLarge[\"EE\"]=(dfLarge.E*4).round(0)\n",
+    "dfLarge['errY']=dfLarge.A*0.02+0.02\n",
+    "dfLarge.head(10)\n",
+    "df.meta.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\", 'Bool.AxisTitle': \"A>half\", 'E.AxisTitle': \"Category\"}\n",
+    "widgetParams=[\n",
+    "    ['range', ['A']],\n",
+    "    ['range', ['B', 0, 1, 0.1, 0, 1]],\n",
+    "\n",
+    "    ['range', ['C'], {'type': 'minmax'}],\n",
+    "    ['range', ['D'], {'type': 'sigma', 'bins': 10, 'sigma': 3}],\n",
+    "    ['range', ['E'], {'type': 'sigmaMed', 'bins': 10, 'sigma': 3}],\n",
+    "    ['slider', ['AA'], {'bins': 10}],\n",
+    "    ['multiSelect', [\"DDC\"]],\n",
+    "    ['select',[\"CC\", 0, 1, 2, 3]],\n",
+    "    ['multiSelect',[\"BoolB\"]],\n",
+    "    #['slider','F', ['@min()','@max()','@med','@min()','@median()+3*#tlm()']], # to be implmneted\n",
+    "    ['select',[\"colorZ\"], {\"callback\": \"parameter\", \"default\": 3}],\n",
+    "    ['slider',[\"size\"], {\"callback\": \"parameter\"}],\n",
+    "    ['select',[\"legendFontSize\"], {\"callback\": \"parameter\", \"default\": 2}],\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrayCompressionRelative8=[(\".*\",[(\"relative\",8), (\"zip\",0), (\"code\", 0), (\"base64\",0)])]\n",
+    "output_file(\"test_compression.html\")\n",
+    "bokehDrawSA.fromArray(dfLarge, None, figureArray, widgetParams, layout=layout, tooltips=tooltips,\n",
+    "                            widgetLayout=widgetLayoutDesc, nPointRender=200, parameterArray=parameterArray, arrayCompression=arrayCompressionRelative8)"
    ]
   },
   {
