Added tutorial for compression and downsampling`

--- a/RootInteractive/tutorial/bokehDraw/standAlone.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/standAlone.ipynb
@@ -27,7 +27,7 @@
     "import numpy as np\n",
     "import math\n",
     "import logging\n",
-    "output_notebook()\n"
+    "#output_notebook()\n"
    ]
   },
   {
@@ -114,7 +114,7 @@
     "}\n",
     "tooltips = [(\"VarA\", \"(@A)\"), (\"VarB\", \"(@B)\"), (\"VarC\", \"(@C)\"), (\"VarD\", \"(@D)\")]\n",
     "pAll = bokehDrawArray(df, \"A>0\", figureArray, layout=layout, size=4, tooltips=tooltips)\n",
-    "show(pAll[0])"
+    "#show(pAll[0])"
    ]
   },
   {
@@ -259,9 +259,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfLarge = pd.DataFrame(np.random.random_sample(size=(200000, 6)), columns=list('ABCDEF'))\n",
+    "dfLarge = pd.DataFrame(np.random.random_sample(size=(100000, 6)), columns=list('ABCDEF'))\n",
     "initMetadata(dfLarge)\n",
-    "dfLarge[\"B\"]=np.linspace(0,1,200000)\n",
+    "dfLarge[\"B\"]=np.linspace(0,1,100000)\n",
     "dfLarge.eval(\"Bool=A>0.5\", inplace=True)\n",
     "dfLarge.eval(\"BoolB=B>0.5\", inplace=True)\n",
     "dfLarge.eval(\"BoolC=C>0.1\", inplace=True)\n",
@@ -275,24 +275,7 @@
     "dfLarge[\"DDC\"]=((dfLarge.D*4).round(0)).astype(int).map(mapDDC)\n",
     "dfLarge[\"EE\"]=(dfLarge.E*4).round(0)\n",
     "dfLarge['errY']=dfLarge.A*0.02+0.02\n",
-    "dfLarge.head(10)\n",
-    "df.meta.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\", 'Bool.AxisTitle': \"A>half\", 'E.AxisTitle': \"Category\"}\n",
-    "widgetParams=[\n",
-    "    ['range', ['A']],\n",
-    "    ['range', ['B', 0, 1, 0.1, 0, 1]],\n",
-    "\n",
-    "    ['range', ['C'], {'type': 'minmax'}],\n",
-    "    ['range', ['D'], {'type': 'sigma', 'bins': 10, 'sigma': 3}],\n",
-    "    ['range', ['E'], {'type': 'sigmaMed', 'bins': 10, 'sigma': 3}],\n",
-    "    ['slider', ['AA'], {'bins': 10}],\n",
-    "    ['multiSelect', [\"DDC\"]],\n",
-    "    ['select',[\"CC\", 0, 1, 2, 3]],\n",
-    "    ['multiSelect',[\"BoolB\"]],\n",
-    "    #['slider','F', ['@min()','@max()','@med','@min()','@median()+3*#tlm()']], # to be implmneted\n",
-    "    ['select',[\"colorZ\"], {\"callback\": \"parameter\", \"default\": 3}],\n",
-    "    ['slider',[\"size\"], {\"callback\": \"parameter\"}],\n",
-    "    ['select',[\"legendFontSize\"], {\"callback\": \"parameter\", \"default\": 2}],\n",
-    "]"
+    "dfLarge.meta.metaData = {'A.AxisTitle': \"A (cm)\", 'B.AxisTitle': \"B (cm/s)\", 'C.AxisTitle': \"C (s)\", 'D.AxisTitle': \"D (a.u.)\", 'Bool.AxisTitle': \"A>half\", 'E.AxisTitle': \"Category\"}\n"
    ]
   },
   {
@@ -301,10 +284,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arrayCompressionRelative8=[(\".*\",[(\"relative\",8), (\"zip\",0), (\"code\", 0), (\"base64\",0)])]\n",
+    "arrayCompressionRelative8=[(\".*\",[(\"relative\",8), (\"code\", 0), (\"zip\",0), (\"base64\",0)])]\n",
     "output_file(\"test_compression.html\")\n",
     "bokehDrawSA.fromArray(dfLarge, None, figureArray, widgetParams, layout=layout, tooltips=tooltips,\n",
-    "                            widgetLayout=widgetLayoutDesc, nPointRender=200, parameterArray=parameterArray, arrayCompression=arrayCompressionRelative8)"
+    "                            widgetLayout=widgetLayoutDesc, nPointRender=200, parameterArray=parameterArray, arrayCompression=arrayCompressionRelative8, useNotebook=False)"
    ]
   },
   {
@@ -331,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
