Updated failing tutorial

--- a/RootInteractive/tutorial/bokehDraw/customJsColumns.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/customJsColumns.ipynb
@@ -21,19 +21,7 @@
    "execution_count": null,
    "id": "c162dc7e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Import  CDSAlias.ts\n",
-      "Import  DownsamplerCDS.ts\n",
-      "x bokehVisJS3DGraph.ts\n",
-      "x HistogramCDS.ts\n",
-      "Import  CDSCompress.ts\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from bokeh.io import show, output_notebook\n",
     "from bokeh.plotting import output_file\n",
@@ -149,7 +137,7 @@
     "    },\n",
     "    # They can also be used as histogram weights\n",
     "    {\n",
-    "        \"name\": \"C_cut\",\n",
+    "        \"name\": \"C_accepted\",\n",
     "        \"variables\": [\"C\"],\n",
     "        \"parameters\": [\"C_cut\"],\n",
     "        \"func\": \"return C < C_cut\"\n",
@@ -192,7 +180,7 @@
     "        \"name\": \"histoA\", \"variables\": [\"A\"], \"nbins\": 10, \"histograms\": {\n",
     "            \"entries\": None,\n",
     "            \"entries_C_cut\": {\n",
-    "                \"weights\": \"C_cut\"\n",
+    "                \"weights\": \"C_accepted\"\n",
     "            }\n",
     "        }\n",
     "    },\n",
@@ -201,7 +189,7 @@
     "        \"histograms\": {\n",
     "            \"entries\": None,\n",
     "            \"entries_C_cut\": {\n",
-    "                \"weights\": \"C_cut\"\n",
+    "                \"weights\": \"C_accepted\"\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -271,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
