--- a/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
@@ -287,10 +287,10 @@
     "        {\"name\": \"histoAB\", \"variables\": [\"A\", \"(A+B)/2\"], \"nbins\": [20, 20], \"weights\": \"D\", \"axis\": [0, 1], \"quantiles\": [.1, .5, .9]}\n",
     "    ]\n",
     "    figureArray = [\n",
-    "        [['histoAB_0.quantile_0', 'histoAB_0.quantile_1', 'histoAB_0.quantile_2'], ['histoAB_0.bin_center_1']],\n",
-    "        [['histoAB_0.quantile_1', 'histoAB_0.mean'], ['histoAB_0.bin_center_1']],\n",
+    "        [['quantile_0', 'quantile_1', 'quantile_2'], ['bin_center_1'], {\"source\": \"histoAB_0\"}],\n",
+    "        [['quantile_1', 'mean'], ['bin_center_1'], {\"source\": \"histoAB_0\"}],\n",
     "        [['A'], ['histoAB'], {\"yAxisTitle\": \"(A+B)/2\"}],\n",
-    "        [['histoAB_0.std'], ['histoAB_0.bin_center_1']],\n",
+    "        [['std'], ['bin_center_1'], {\"source\": \"histoAB_0\"}],\n",
     "        [\"tableHisto\", {\"rowwise\": False}]\n",
     "    ]\n",
     "    figureLayoutDesc=[\n",
@@ -325,9 +325,10 @@
     "        {\"name\": \"histoABC\", \"variables\": [\"(A+C)/2\", \"B\", \"C\"], \"nbins\": [8, 10, 12], \"weights\": \"D\", \"axis\": [0], \"sum_range\": [[.25, .75]]},\n",
     "    ]\n",
     "    figureArray = [\n",
-    "        [['histoABC_0.bin_center_1'], ['histoABC_0.mean'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}],\n",
-    "        [['histoABC_0.bin_center_1'], ['histoABC_0.sum_0'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}],\n",
-    "        [['histoABC_0.bin_center_1'], ['histoABC_0.std'], {\"colorZvar\": \"histoABC_0.bin_center_2\", \"size\": 7}]\n",
+    "        [['bin_center_1'], ['mean']],\n",
+    "        [['bin_center_1'], ['sum_0']],\n",
+    "        [['bin_center_1'], ['std']],\n",
+    "        {\"source\": \"histoABC_0\", \"colorZvar\": \"bin_center_2\", \"size\": 7}\n",
     "    ]\n",
     "    figureLayoutDesc=[\n",
     "        [0, 1, 2, {'commonX': 1, 'y_visible': 1, 'x_visible':1, 'plot_height': 300}],\n",
@@ -363,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
