Adding more documentation to bokehDraw standalone tutorials

--- a/RootInteractive/tutorial/bokehDraw/standAlone.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/standAlone.ipynb
@@ -27,7 +27,7 @@
     "import numpy as np\n",
     "import math\n",
     "import logging\n",
-    "#output_notebook()\n"
+    "output_notebook()\n"
    ]
   },
   {
@@ -80,7 +80,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Identify the layout\n",
+    "* Define the figure array\n",
+    "    * One array for each figure\n",
+    "        * [['x-axis variable'], ['one or more y-axis variables'], {figure options}]\n",
+    "        * {figure options} (can be defined for each figure separately or globally)\n",
+    "            * \"size\": integer to define marker size\n",
+    "            * \"colorZvar\": variable to be displayed on the color (z) axis\n",
+    "            * \"errY\", \"errX\": variables to be used as the error bars in y, x\n",
+    "            * \"rescaleColorMapper\": if True, color (z) axis will automatically rescale when making the data selection with widgets\n",
+    "* Identify the figure layout\n",
+    "    * either an array with arrays for each row\n",
+    "    * or a dictionary to create several tabs\n",
+    "    * [[0,1,2, {options}, [3,4,5, {options}], {global options}]\n",
+    "        * indices refer to indices of figure array\n",
+    "        * {options}\n",
+    "            * 'commonX': use common x-axis for all figures\n",
+    "            * 'y_visible', 'x_visible': option for visibility of y,x axis titles\n",
+    "            * 'plot_height': height of the plots\n",
+    "            * 'sizing_mode': 'scale_width' -> Scale width of the dashboard automatically to the screen width\n",
     "* Draw the graphs using bokehDrawArray\n",
     "* Layout description can be a dictionary, this way it creates multiple tabs"
    ]
@@ -136,7 +153,16 @@
     "    * slider\n",
     "    * multiSelect\n",
     "    * select\n",
-    "* widget layout description works same as figure layout description"
+    "* widget layout description works same as figure layout description\n",
+    "* Options for range slider and slider\n",
+    "    * ['variable_x', min_x, max_x, step, mix_x_start, max_x_start]\n",
+    "    * 'type':\n",
+    "        * 'minmax': use minimum and maximum in data to define the range\n",
+    "        * 'sigma': use the sigma around the mean to define the range\n",
+    "        * 'sigmaMed': use the sigma around the median to define the range\n",
+    "        * both 'sigma' and 'sigmaMed' to be used to exclude outliers from the selection\n",
+    "    * 'sigma': n sigma ragne around the mean or median in case of 'type': 'sigma' or 'type': 'sigmaMed'\n",
+    "    * 'bins': number of steps for the slider"
    ]
   },
   {
@@ -248,6 +274,21 @@
     "    * Compress the data\n",
     "        * bokehDrawArray (and bokehDrawSA) take an arrayCompression parameter, which is a list of (regex, pipeline) pairs, where regex is the regular expression used to match column names\n",
     "          and pipeline is a list of operations to be used on the column. Supported values are \"relative\", \"delta\", \"zip\" and \"base64\" and the pipeline only works if the last step is (\"base64\", 0)\n",
+    "        * Example: \n",
+    "            ``arrayCompressionParam = [\n",
+    "            (\".conv.Sigma.*\",[(\"relative\",7), (\"code\",0), (\"zip\",0), (\"base64\",0)]), \n",
+    "            (\".delta.\",[(\"relative\",10), (\"code\",0), (\"zip\",0), (\"base64\",0)]), \n",
+    "            (\".i2.\",[(\"relative\",7), (\"code\",0), (\"zip\",0), (\"base64\",0)]), \n",
+    "            (\".*\",[(\"relative\",8), (\"code\",0), (\"zip\",0), (\"base64\",0)])]``\n",
+    "            * Variables will be compressed in the given order. Once a variable was compressed, it will not be overwritten by another compression.\n",
+    "            * Tuple paramters: (\".conv.Sigma.*\",[(\"relative\",7), (\"code\",0), (\"zip\",0), (\"base64\",0)])\n",
+    "                * first parameter is a regex expression to match the column names to be compressed\n",
+    "                * second parameter is a list of operation to be used on the column\n",
+    "                    * most relevant for the user is the first parameter of the list which defines the lossy compression\n",
+    "                        * \"absolute\": precision to be used in absolute units of the given variable, e.g. 0.0001\n",
+    "                        * \"relative\": precision to be used in units of bits, e.g. 10\n",
+    "                    * (\"code\",0), (\"zip\",0), (\"base64\",0)\n",
+    "                        * lossless compression, e.g. by coding or zipping\n",
     "    * Random downsampling on the client\n",
     "        * if nPointRender is specified as an option to bokehDrawArray / bokehDrawSA the data is downsampled so that only n points from the original data source are rendered, improving the performance\n",
     "* Dashboard will be created in current directory"
@@ -300,7 +341,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -314,9 +355,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
