--- a/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
+++ b/RootInteractive/tutorial/bokehDraw/test_bokehClientHistogram.ipynb
@@ -110,6 +110,7 @@
     "      * ranges [max,min] 0 in case not specified minimum maximum of data points for current selection  used\n",
     "      * qunatiles, sum_range, axis\n",
     "         * parameters of agreagation function\n",
+    "      * weights: can be a column of the data frame, another histogram or a cut or paramterized cut variation (see customJsColumns.ipynb for examples)\n",
     "   * columns in created histograms\n",
     "      * 1D histogram:\n",
     "          * bin_bottom, bin_center, bin_top - bin edges and centers\n",
@@ -350,7 +351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -364,9 +365,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
